fixtures/cs-hash-01/bad/module-level-password-hash.ts
import crypto from "crypto";

const passwordHash = crypto.createHash("md5").update("x").digest("hex");

export { passwordHash };
